Fixed overflow-x: hidden not working on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,6 @@
 
 body {
   background: #141414;
-  overflow-x: hidden;
 }
 
 button {
